<resources>
    <string name="app_name">WeatherApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="cloudy">cloudy</string>
    <string name="city">City</string>
    <string name="check">Check the weather</string>
    <string name="temp">Temp</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="tempMin">Temp min</string>
    <string name="tempMax">Temp max</string>
</resources>